# blog

./: Cargo.toml  build.rs  shell.nix
blok/: Cargo.toml  build.rs
blok/src/: doc.rs  lib.rs
blok/src/client/: linux.rs  mod.rs  windows.rs
blok/src/client/graphics/: gl_buffer.rs  gl_debug.rs  gl_error.rs  gl_program.rs  gl_shader.rs  mod.rs  parameters.rs
blok/src/client/graphics/generic/: fragment_shader.rs  instance.rs  mod.rs  model.rs  shader.vert
blok/src/client/graphics/generic_fragment_shader/: mod.rs  shader.frag
blok/src/client/graphics/generic_pipeline/: fragment_shader.rs  instance.rs  mod.rs  model.rs
blok/src/client/graphics/gl/: gl_error.rs  gl_uniform.rs  mod.rs
blok/src/client/graphics/trivial_block/: mod.rs  trivial_block.vert
blok/src/client/graphics/trivial_block_pipeline/: mod.rs  shader.vert
opengl/: Cargo.toml  build.rs
opengl/src/: lib.rs
script/: vscode-build-task.bash
src/: state.rs
src/client/: input.rs  mod.rs
src/client/graphics/: mod.rs
