[package]
name = "blok"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
version = "^1.0.51"

[dependencies.defer-lite]
version = "^1.0.0"

[dependencies.opengl]
path = "../opengl"

[dependencies.serde]
features = ["derive"]
version = "^1.0.130"

[target.'cfg(target_os = "windows")'.dependencies.windows]
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_OpenGL",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]
version = "~0.28.0"
