[package]
name = "blok"
version = "0.0.0"
edition = "2021"

[dependencies.anyhow]
version = "^1.0.51"

[dependencies.defer-lite]
version = "^1.0.0"

[dependencies.glam]
version = "~0.20.1"

[dependencies.sdl2]
version = "~0.35.1"

[dependencies.opengl]
path = "../opengl"

[dependencies.serde]
features = ["derive"]
version = "^1.0.130"
